--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>module2-solution</title>
+<link rel="stylesheet" href="https://github.com/sama-ams/mod_solution2/blob/main/module2.css">
 </head>
 <body >
 <h1>Our Menu </h1>
