--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>module2-solution</title>
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/sama-ams/mod_solution2/main/module2.css">
-</head>
+<link type="text/css" rel="stylesheet" href="style.css" /></head>
 <body >
 <h1>Our Menu </h1>
 	<section class="column-lg-4 colmn-md-6 colmn-sm-12">
