--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>module2-solution</title>
-<link type="text/css" rel="stylesheet" href="main.css">
+<link type="text/css" rel="stylesheet" href="https://github.com/sama-ams/mod_solution2/blob/main/main.css">
 </head>
 <body >
 <h1>Our Menu </h1>
